--- a/.github/workflows/ARMv8_OpenWrt.yml
+++ b/.github/workflows/ARMv8_OpenWrt.yml
@@ -94,7 +94,7 @@ jobs:
       if: (!cancelled())
       uses: ophub/flippy-openwrt-actions@main
       env:
-        OPENWRT_ARMVIRT: https://github.com/Zane-E/OP-ARM/releases/download/openwrt_armvirt/openwrt-armsr-armv8-generic-rootfs.tar.gz
+        OPENWRT_ARMVIRT: https://github.com/sbwml/builder/releases/download/v24.10.3/openwrt-24.10.3-armsr-armv8-generic-rootfs.tar.gz
         PACKAGE_SOC: all
         WHOAMI: Milo_Zed
         #KERNEL_REPO_URL: https://github.com/breakings/OpenWrt/tree/main/opt
